# django-backend

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: admin.py  models.py  urls.py
app/api/: admin.py  apps.py  models.py  permission.py  receivers.py  serializers.py  urls.py  views.py  viewsets.py
app/api/migrations/: 0001_initial.py
app/api/tests/: conftest.py  tests.py
app/migrations/: 0001_initial.py
app/tests/: conftest.py  tests.py
compose/local/django/: Dockerfile
core/: asgi.py  settings.py  urls.py  wsgi.py
shopping_list/: admin.py  models.py  tests.py  urls.py
shopping_list/api/: serializers.py  viewsets.py
shopping_list/fixtures/: initial_shopping_items.json
shopping_list/migrations/: 0001_initial.py
shopping_list/tests/: tests.py
utils/: throttling.py
