[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = ""
authors = ["alex.lin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
pytest = "^8.3.2"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
